@@ -415,10 +415,10 @@ class ModuleConfigWizardItem(ModelSQL, ModelView):
                 where=(model_data.model ==
                     'ir.module.module.config_wizard.item')))
 
-        table = TableHandler(cls, module_name)
+        table_h = cls.__table_handler__(module_name)
 
         # Migrate from 2.2 remove name
-        table.drop_column('name')
+        table_h.drop_column('name')
 
         super(ModuleConfigWizardItem, cls).__register__(module_name)
 
